2006-01-10  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_0): Remove call to wincap.init.
	* init.cc (dll_entry): Rename is_wow64_proc to wow64_test_stack_marker.
	Call wincap.init here before doing anything else.  Use wincap.is_wow64
	to determine if we're running in a WOW64 emulator.
	* mmap.cc (MapViewNT): Don't use AT_ROUND_TO_PAGE in WOW64, it's
	apparently not supported.
	(mmap64): Don't create mappings beyond EOF, which would need to use
	AT_ROUND_TO_PAGE, on WOW64.
	* wincap.cc (wincap): Throw into the .cygwin_dll_common section.
	(wincapc::init): Determine if running in WOW64 and set wow_64 flag.
	* wincap.h (class wincapc): Add wow64 member.
	(wincapc::is_wow64): New method.

2006-01-10  Christopher Faylor  <cgf@timesys.com>

	* fhandler_proc.cc (format_proc_cpuinfo): Avoid leading whitespace in
	model name.

2006-01-09  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Reorganize slightly so that 16 bit check is
	done prior to check for command.com/cmd.com.  Don't bother setting
	CREATE_SUSPENDED flag for a MS-DOS process since it doesn't work
	anyway.  Avoid calling remember() when the child process has already
	exited.
	(av::fixup): Explicitly set cygexec flag to false on a 16 bit process.

2006-01-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/getopt.h (getopt_long_only): Declare.

2006-01-09  Eric Blake  <ebb9@byu.net>

	* cygwin.din: Export getsubopt.
	* include/cygwin/version.h: Bump API minor version.

2006-01-08  Christopher Faylor  <cgf@timesys.com>

	* fhandler_tty.cc (fhandler_tty_slave::dup): Don't assign a controlling
	terminal to a process when duped.  Linux doesn't do this, so we won't
	either.

2006-01-08  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (spenvs[]): windir -> WINDIR.

2006-01-07  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::need_invisible): Remove
	duplicate test.

2006-01-07  Christopher Faylor  <cgf@timesys.com>
