@@ -1365,6 +1365,5 @@ class select_stuff
 		   device_specific_mailslot (0) {}
 };
 
-void __stdcall set_console_state_for_spawn ();
-
+void __stdcall set_console_state_for_spawn (bool);
 #endif /* _FHANDLER_H_ */
