@@ -1,3 +1,14 @@
+2006-01-12  Christopher Faylor  <cgf@timesys.com>
+
+	* fhandler.h (set_console_state_for_spawn): Whackamole the argument
+	back to a bool.
+	* spawn.cc (spawn_guts): Ditto, i.e., once again call
+	set_console_state_for_spawn with an indication of whether we're about
+	to start a cygwin process.
+	* fhandler_console.cc (set_console_state_for_spawn): Don't set the
+	console state if we know we're starting a cygwin process or if we're
+	using a "real" tty.
+
 2006-01-10  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dcrt0.cc (dll_crt0_0): Remove call to wincap.init.
